--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html ${htmlAttrs}>
 
 <head>
-    <script src="https://apis.google.com/js/api:client.js"></script>
+    <script src="https://accounts.google.com/gsi/client" async></script>
     ${head}
 </head>
 
